# comfyui-auto-anime-prompts

./: .gitignore  LICENSE  README.md  __init__.py  debug_load.py  main.py  pyproject.toml
.github/workflows/: lint.yml  release.yml
core/: __init__.py  constants.py  file_utils.py  passport_utils.py  random_utils.py  rednote_utils.py
nodes/: __init__.py  passport_photo.py  prompt_batch.py  prompt_combiner.py  prompt_loader.py  prompt_rednote.py  suffix_editor.py
prompts/: sample_1girl_v1.txt  style_names_v1.txt
scripts/: daily50.py  filter_rednote.py  filter_v3.py
tests/: __init__.py  conftest.py  test_file_utils.py  test_passport_utils.py  test_random_utils.py
workflows/: basic_workflow.json  batch_workflow.json  combiner_workflow.json  my-qwen2511-edit-image-v1.json  rednote_workflow.json
