[project]
name = "comfyui-auto-anime-prompts"
version = "1.0.0"
description = "ComfyUI custom nodes for loading anime character prompts with aesthetic suffix support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["comfyui", "auto", "anime", "prompts", "stable-diffusion", "qwen", "z-image", "flux", "illustrious", "rednote", "xiaohongshu", "ai-art", "workflow",]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/jluo-github/comfyui-auto-anime-prompts"
Repository = "https://github.com/jluo-github/comfyui-auto-anime-prompts"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.txt",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "nodes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
